--- a/css/parciales/_header.scss
+++ b/css/parciales/_header.scss
@@ -92,7 +92,7 @@ header {
     }
 
     .LoginContainer a {
-      color: #fff;
+      color: #d94dfc;
       text-decoration: none;
       padding: 10px 20px;
       border-radius: 50px;
