--- a/css/estilos.css
+++ b/css/estilos.css
@@ -79,7 +79,7 @@ header .nav .dropdown .dropdown-item:hover {
   background-color: var(--primary-color-dark);
 }
 header .nav .LoginContainer a {
-  color: #fff;
+  color: #d94dfc;
   text-decoration: none;
   padding: 10px 20px;
   border-radius: 50px;
