--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -4,3 +4,4 @@
 @use "./parciales/estilos_pelis";
 @use "./parciales/estilos_series";
 @use "./parciales/estilos_detallePeli";
+@use "./parciales/estilos_visionado";
