--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,15 @@
 @charset "UTF-8";
-/* Header */
 header {
-  padding: 10px 0;
-  background-color: #141414;
-  /* Logo */
-  /* Navigation */
-  /* Hamburger Menu */
+  padding: 10px 0 !important;
+  background-color: #141414 !important;
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
 }
-header .container-header {
+
+.container-header {
   display: grid;
   grid-template-columns: 1fr auto;
   align-items: center;
@@ -15,18 +17,21 @@ header .container-header {
   margin: 0 auto;
   padding: 0 10px;
 }
-header .logo img {
+
+.logo img {
   height: 50px;
   width: auto;
   margin-right: 10px;
 }
-header .nav {
+
+.nav {
   display: grid;
   grid-template-columns: repeat(4, auto) auto;
   gap: 20px;
   align-items: center;
 }
-header .nav.active {
+
+.nav.active {
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -37,25 +42,30 @@ header .nav.active {
   background-color: #1e1e1e;
   padding: 20px 0;
 }
-header .nav .nav-link {
+
+.nav-link {
   font-size: 1rem;
   color: var(--text-on-primary);
   font-weight: 500;
   position: relative;
   transition: color 0.3s;
 }
-header .nav .nav-link:hover {
+
+.nav-link:hover {
   color: var(--primary-color-light);
 }
-header .nav .dropdown {
+
+.dropdown {
   position: relative;
 }
-header .nav .dropdown .dropdown-toggle::after {
+
+.dropdown-toggle::after {
   content: "▼";
   font-size: 0.8rem;
   margin-left: 5px;
 }
-header .nav .dropdown .dropdown-menu {
+
+.dropdown-menu {
   display: none;
   position: absolute;
   top: 100%;
@@ -65,20 +75,24 @@ header .nav .dropdown .dropdown-menu {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   overflow: hidden;
 }
-header .nav .dropdown:hover .dropdown-menu {
+
+.dropdown:hover .dropdown-menu {
   display: block;
 }
-header .nav .dropdown .dropdown-item {
+
+.dropdown-item {
   padding: 10px 15px;
   color: var(--text-on-primary);
   display: block;
   font-size: 0.9rem;
   transition: background 0.3s;
 }
-header .nav .dropdown .dropdown-item:hover {
+
+.dropdown-item:hover {
   background-color: var(--primary-color-dark);
 }
-header .nav .LoginContainer a {
+
+.LoginContainer a {
   color: #d94dfc;
   text-decoration: none;
   padding: 10px 20px;
@@ -86,12 +100,14 @@ header .nav .LoginContainer a {
   font-weight: 500;
   transition: background-color 0.3s, color 0.3s;
 }
-header .nav .LoginContainer a.registrarse:hover,
-header .nav .LoginContainer a.login:hover {
+
+.LoginContainer a.registrarse:hover,
+.LoginContainer a.login:hover {
   background-color: #d94dfc;
   color: #fff;
 }
-header .hamburger {
+
+.hamburger {
   display: none;
   flex-direction: column;
   justify-content: space-between;
@@ -100,7 +116,6 @@ header .hamburger {
   cursor: pointer;
 }
 
-/* Barra de búsqueda */
 .search-bar {
   display: flex;
   align-items: center;
@@ -108,8 +123,14 @@ header .hamburger {
   padding: 10px 20px;
   background-color: #2e2e2e;
   gap: 10px;
+  position: fixed;
+  top: 70px;
+  left: 0;
+  width: 100%;
+  z-index: 999;
 }
-.search-bar .search-input {
+
+.search-input {
   width: 100%;
   max-width: 600px;
   padding: 10px 15px;
@@ -121,16 +142,20 @@ header .hamburger {
   outline: none;
   transition: border-color 0.3s;
 }
-.search-bar .search-input::-moz-placeholder {
-  color: #000000;
+
+.search-input::-moz-placeholder {
+  color: #000;
 }
-.search-bar .search-input::placeholder {
-  color: #000000;
+
+.search-input::placeholder {
+  color: #000;
 }
-.search-bar .search-input:focus {
+
+.search-input:focus {
   border-color: var(--primary-color-light);
 }
-.search-bar .search-button {
+
+.search-button {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -143,19 +168,20 @@ header .hamburger {
   font-size: 1rem;
   transition: background-color 0.3s;
 }
-.search-bar .search-button:hover {
+
+.search-button:hover {
   background-color: var(--primary-color-dark);
 }
-.search-bar .search-button i {
+
+.search-button i {
   font-size: 1.2rem;
 }
 
-/* Media Query */
 @media (max-width: 768px) {
   header .hamburger {
     display: flex;
   }
-  header .nav {
+  .nav {
     display: none;
   }
   .nav.active {
@@ -171,21 +197,42 @@ header .hamburger {
     z-index: 9999;
   }
   .search-bar {
-    display: flex;
     flex-direction: row;
-    align-items: center;
     gap: 10px;
     padding: 10px;
+    top: 60px;
   }
   .search-input {
-    flex: 1;
-    width: auto;
+    display: none;
+  }
+  .search-button {
+    margin-left: auto;
+    margin-top: 10px;
+  }
+}
+@media (min-width: 769px) {
+  .search-input {
+    display: block;
+    flex-grow: 1;
   }
   .search-button {
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 10px;
+    background-color: var(--primary-color);
+    color: var(--btn-color);
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s;
+  }
+  .search-button:hover {
+    background-color: var(--primary-color-dark);
+  }
+  .search-button i {
+    font-size: 1.2rem;
   }
 }
 *,
