--- a/css/parciales/_header.scss
+++ b/css/parciales/_header.scss
@@ -1,3 +1,11 @@
+// Variables
+$primary-color: #d94dfc;
+$primary-color-light: lighten($primary-color, 10%);
+$primary-color-dark: darken($primary-color, 10%);
+$btn-color: #fff;
+$text-on-primary: #fff;
+
+// Estilos Globales
 header {
   padding: 10px 0 !important;
   background-color: #141414 !important;
@@ -17,95 +25,101 @@ header {
   padding: 0 10px;
 }
 
-.logo img {
-  height: 50px;
-  width: auto;
-  margin-right: 10px;
+.logo {
+  img {
+    height: 50px;
+    width: auto;
+    margin-right: 10px;
+  }
 }
 
+// Estilos de la navegación
 .nav {
   display: grid;
   grid-template-columns: repeat(4, auto) auto;
   gap: 20px;
   align-items: center;
+
+  &.active {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    background-color: #1e1e1e;
+    padding: 20px 0;
+  }
+
+  .nav-link {
+    font-size: 1rem;
+    color: $text-on-primary;
+    font-weight: 500;
+    position: relative;
+    transition: color 0.3s;
+
+    &:hover {
+      color: $primary-color-light;
+    }
+  }
+
+  .dropdown {
+    position: relative;
+
+    .dropdown-toggle::after {
+      content: '▼';
+      font-size: 0.8rem;
+      margin-left: 5px;
+    }
+
+    .dropdown-menu {
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      background-color: #2e2e2e;
+      border-radius: 4px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      overflow: hidden;
+
+      .dropdown-item {
+        padding: 10px 15px;
+        color: $text-on-primary;
+        display: block;
+        font-size: 0.9rem;
+        transition: background 0.3s;
+
+        &:hover {
+          background-color: $primary-color-dark;
+        }
+      }
+    }
+
+    &:hover .dropdown-menu {
+      display: block;
+    }
+  }
 }
 
-.nav.active {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  position: absolute;
-  top: 70px;
-  left: 0;
-  width: 100%;
-  background-color: #1e1e1e;
-  padding: 20px 0;
+.LoginContainer {
+  a {
+    color: $primary-color;
+    text-decoration: none;
+    padding: 10px 20px;
+    border-radius: 50px;
+    font-weight: 500;
+    transition: background-color 0.3s, color 0.3s;
+
+    &.registrarse:hover,
+    &.login:hover {
+      background-color: $primary-color;
+      color: #fff;
+    }
+  }
 }
 
-.nav-link {
-  font-size: 1rem;
-  color: var(--text-on-primary);
-  font-weight: 500;
-  position: relative;
-  transition: color 0.3s;
-}
-
-.nav-link:hover {
-  color: var(--primary-color-light);
-}
-
-.dropdown {
-  position: relative;
-}
-
-.dropdown-toggle::after {
-  content: '▼';
-  font-size: 0.8rem;
-  margin-left: 5px;
-}
-
-.dropdown-menu {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  background-color: #2e2e2e;
-  border-radius: 4px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  overflow: hidden;
-}
-
-.dropdown:hover .dropdown-menu {
-  display: block;
-}
-
-.dropdown-item {
-  padding: 10px 15px;
-  color: var(--text-on-primary);
-  display: block;
-  font-size: 0.9rem;
-  transition: background 0.3s;
-}
-
-.dropdown-item:hover {
-  background-color: var(--primary-color-dark);
-}
-
-.LoginContainer a {
-  color: #d94dfc;
-  text-decoration: none;
-  padding: 10px 20px;
-  border-radius: 50px;
-  font-weight: 500;
-  transition: background-color 0.3s, color 0.3s;
-}
-
-.LoginContainer a.registrarse:hover,
-.LoginContainer a.login:hover {
-  background-color: #d94dfc;
-  color: #fff;
-}
-
+// Estilo del botón hamburguesa
 .hamburger {
   display: none;
   flex-direction: column;
@@ -115,6 +129,7 @@ header {
   cursor: pointer;
 }
 
+// Estilo  barra de búsqueda
 .search-bar {
   display: flex;
   align-items: center;
@@ -127,51 +142,52 @@ header {
   left: 0;
   width: 100%;
   z-index: 999;
+
+  .search-input {
+    width: 100%;
+    max-width: 600px;
+    padding: 10px 15px;
+    border-radius: 15px;
+    border: 1px solid #444;
+    font-size: 1rem;
+    color: $text-on-primary;
+    background-color: #747474;
+    outline: none;
+    transition: border-color 0.3s;
+
+    &::placeholder {
+      color: #000;
+    }
+
+    &:focus {
+      border-color: $primary-color-light;
+    }
+  }
+
+  .search-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 15px;
+    background-color: $primary-color;
+    color: $btn-color;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s;
+
+    &:hover {
+      background-color: $primary-color-dark;
+    }
+
+    i {
+      font-size: 1.2rem;
+    }
+  }
 }
 
-.search-input {
-  width: 100%;
-  max-width: 600px;
-  padding: 10px 15px;
-  border-radius: 15px;
-  border: 1px solid #444;
-  font-size: 1rem;
-  color: var(--text-on-primary);
-  background-color: #747474;
-  outline: none;
-  transition: border-color 0.3s;
-}
-
-.search-input::placeholder {
-  color: #000;
-}
-
-.search-input:focus {
-  border-color: var(--primary-color-light);
-}
-
-.search-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px 15px;
-  background-color: var(--primary-color);
-  color: var(--btn-color);
-  border: none;
-  border-radius: 20px;
-  cursor: pointer;
-  font-size: 1rem;
-  transition: background-color 0.3s;
-}
-
-.search-button:hover {
-  background-color: var(--primary-color-dark);
-}
-
-.search-button i {
-  font-size: 1.2rem;
-}
-
+// Medias queries
 @media (max-width: 768px) {
   header .hamburger {
     display: flex;
@@ -179,19 +195,19 @@ header {
 
   .nav {
     display: none;
-  }
 
-  .nav.active {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    position: absolute;
-    top: 70px;
-    left: 0;
-    width: 100%;
-    background-color: #1e1e1e;
-    padding: 20px 0;
-    z-index: 9999;
+    &.active {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      position: absolute;
+      top: 70px;
+      left: 0;
+      width: 100%;
+      background-color: #1e1e1e;
+      padding: 20px 0;
+      z-index: 9999;
+    }
   }
 
   .search-bar {
@@ -222,20 +238,20 @@ header {
     align-items: center;
     justify-content: center;
     padding: 10px;
-    background-color: var(--primary-color);
-    color: var(--btn-color);
+    background-color: $primary-color;
+    color: $btn-color;
     border: none;
     border-radius: 20px;
     cursor: pointer;
     font-size: 1rem;
     transition: background-color 0.3s;
-  }
 
-  .search-button:hover {
-    background-color: var(--primary-color-dark);
-  }
+    &:hover {
+      background-color: $primary-color-dark;
+    }
 
-  .search-button i {
-    font-size: 1.2rem;
+    i {
+      font-size: 1.2rem;
+    }
   }
 }
