--- a/css/estilos.css
+++ b/css/estilos.css
@@ -550,14 +550,14 @@ footer .footer-nav .footer-link:hover {
 }
 
 :root {
-  --primary-color: #bb00fa;
-  --primary-color-light: #d94dfc;
-  --primary-color-dark: #9600c7;
-  --text-on-primary: #ffffff;
-  --secondary-color: #00fa94;
-  --btn-color: #ffffff;
-  --btn-bg: var(--primary-color-dark);
-  --btn-bg-hover: var(--primary-color-dark);
+  --primary-color:#bb00fa;
+  --primary-color-light:#d94dfc;
+  --primary-color-dark:#9600c7;
+  --text-on-primary:#ffffff;
+  --secondary-color:#00fa94;
+  --btn-color:#ffffff;
+  --btn-bg:var(--primary-color-dark);
+  --btn-bg-hover:var(--primary-color-dark);
   --btn-negro:#141414;
 }
 
@@ -574,7 +574,6 @@ footer .footer-nav .footer-link:hover {
   overflow: hidden;
   transition: transform 0.3s ease-in-out;
 }
-
 .movie-item:hover {
   transform: scale(1.3);
 }
@@ -601,7 +600,6 @@ footer .footer-nav .footer-link:hover {
 .movie-item:hover .movie-overlay {
   opacity: 1;
 }
-
 .movie-item img {
   border-radius: 5%;
   width: 100%;
@@ -663,11 +661,9 @@ body {
   border-radius: 5%;
   transition: transform 0.3s ease-in-out;
 }
-
 .serie-item:hover {
   transform: scale(1.3);
 }
-
 .serie-item img {
   width: 100%;
   height: 100%;
@@ -726,16 +722,15 @@ body {
   opacity: 1;
 }
 
-.movie-poster img {
-  position: relative;
-  z-index: 3;
-}
-
 .movie-poster {
   position: relative;
   border-radius: 50%;
   width: auto;
   height: auto;
+}
+.movie-poster img {
+  position: relative;
+  z-index: 3;
 }
 
 .movie-item img {
@@ -748,7 +743,6 @@ body {
   top: 0;
   z-index: 1;
 }
-
 .movie-number img {
   width: 60px;
   height: 250px;
@@ -766,7 +760,6 @@ body {
   margin-top: 10px;
   width: 200px;
 }
-
 .enlace:hover {
   padding-left: 22px;
 }
@@ -780,15 +773,9 @@ body {
   width: 300px;
   transition: transform 0.3s ease, width 0.3s ease;
 }
-
 .pai-carousel .movie-carousel-item:hover {
   transform: scale(1.05);
   width: 500px;
-}
-
-.movie-item img {
-  border-radius: 0%;
-  width: 100%;
 }
 
 .movie-item {
@@ -798,7 +785,10 @@ body {
   border-radius: 5%;
   transition: transform 0.3s ease-in-out;
 }
-
+.movie-item img {
+  border-radius: 0%;
+  width: 100%;
+}
 .movie-item:hover {
   transform: scale(1.3);
 }
@@ -883,11 +873,7 @@ body {
   text-align: center;
 }
 
-span {
-  display: none;
-}
-
-.aparecer {
+span, .aparecer {
   display: none;
 }
 
@@ -926,7 +912,6 @@ span {
   border-radius: 10px;
   overflow: hidden;
 }
-
 .movie-poster img {
   width: 100%;
   height: auto;
@@ -953,7 +938,6 @@ span {
 .movie-item {
   flex: 0 0 auto;
 }
-
 .movie-item img {
   width: 100%;
   height: 100%;
@@ -976,16 +960,15 @@ span {
   width: 100%;
 }
 
-#serie-trending-container img {
-  width: 100%;
-}
-
 #serie-trending-container {
   display: flex;
   flex-wrap: nowrap;
   overflow-x: auto;
   gap: 15px;
   scroll-behavior: smooth;
+}
+#serie-trending-container img {
+  width: 100%;
 }
 
 .serie-item {
@@ -997,11 +980,9 @@ span {
   border-radius: 5%;
   transition: transform 0.3s ease-in-out;
 }
-
 .serie-item:hover {
   transform: scale(1.3);
 }
-
 .serie-item img {
   width: 100%;
   height: 100%;
