--- a/css/parciales/_estilos_series.scss
+++ b/css/parciales/_estilos_series.scss
@@ -1,391 +1,338 @@
 #movie-top10-container, #serie-top10-container, #serie-trending-container {
-    overflow: visible !important;
-  }
-  
-  
-  .movie-item {
-    position: relative;
-    display: inline-block;
-    margin-right: 10px;
-    border-radius: 15%;
-  }
-  
-  
-  .movie-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.7);
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    opacity: 0;
-    padding: 7px;
-    transition: opacity 0.3s ease-in-out;
-    z-index: 3;
-  }
-  
-  
-  .movie-item:hover .movie-overlay {
-    opacity: 1;
-  }
-  
-  
-  .movie-poster img {
+  overflow: visible !important;
+}
+
+.movie-item {
+  position: relative;
+  display: inline-block;
+  margin-right: 10px;
+  border-radius: 15%;
+}
+
+.movie-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  opacity: 0;
+  padding: 7px;
+  transition: opacity 0.3s ease-in-out;
+  z-index: 3;
+}
+
+.movie-item:hover .movie-overlay {
+  opacity: 1;
+}
+
+.movie-poster {
+  img {
     position: relative;
     z-index: 3;
   }
-  
-  
-  .movie-poster {
-    position: relative;
-    border-radius: 50%;
-    width: auto; 
-    height: auto;
-  }
-  
-  
-  .movie-item img {
-    border-radius: 20% 15% 15% 20%;
-    width: 100%;
-  }
-  
-  
-  .movie-number {
-    position: absolute;
-    top: 0;
-    z-index: 1;
-  }
-  
-  
-  .movie-number img {
+
+  position: relative;
+  border-radius: 50%;
+  width: auto;
+  height: auto;
+}
+
+.movie-item img {
+  border-radius: 20% 15% 15% 20%;
+  width: 100%;
+}
+
+.movie-number {
+  position: absolute;
+  top: 0;
+  z-index: 1;
+
+  img {
     width: 60px;
     height: 250px;
   }
-  
-  
-  .carousel-caption .bi-info-circle {
-    border-radius: 50%;
-  }
-  
-  
-  .enlace {
-    color: var(--primary-color-light) !important;
-    font-size: 20px;
-    margin-left: 20px;
-    background-color: var(--btn-negro);
-    margin-top: 10px;
-    width: 200px;
-  }
-  
-  
-  .enlace:hover {
+}
+
+.carousel-caption .bi-info-circle {
+  border-radius: 50%;
+}
+
+.enlace {
+  color: var(--primary-color-light) !important;
+  font-size: 20px;
+  margin-left: 20px;
+  background-color: var(--btn-negro);
+  margin-top: 10px;
+  width: 200px;
+
+  &:hover {
     padding-left: 22px;
   }
-  
-  
-  body {
-    background-color: var(--btn-negro);
-  }
-  
-  
-  .pai-carousel .movie-carousel-item {
-    position: relative;
-    width: 300px;
-    transition: transform 0.3s ease, width 0.3s ease;
-  }
-  
-  
-  .pai-carousel .movie-carousel-item:hover {
+}
+
+body {
+  background-color: var(--btn-negro);
+}
+
+.pai-carousel .movie-carousel-item {
+  position: relative;
+  width: 300px;
+  transition: transform 0.3s ease, width 0.3s ease;
+
+  &:hover {
     transform: scale(1.05);
     width: 500px;
   }
-  
-  
-  .movie-item img {
+}
+
+.movie-item {
+  img {
     border-radius: 0%;
     width: 100%;
   }
-  
-  
-  .movie-item {
-    position: relative;
-    height: 300px;
-    overflow: hidden;
-    border-radius: 5%;
-    transition: transform 0.3s ease-in-out;
-  }
-  
-  
-  .movie-item:hover {
+
+  position: relative;
+  height: 300px;
+  overflow: hidden;
+  border-radius: 5%;
+  transition: transform 0.3s ease-in-out;
+
+  &:hover {
     transform: scale(1.3);
   }
-  
-  
-  .button-container {
-    display: flex;
-    gap: 15px;
-    margin-top: 10px;
-  }
-  
-  
-  .movie-overview {
-    font-size: 14px;
-    color: #bbb;
-    font-weight: 500;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-height: 4.5em;
-    padding: 35px 35px;
-  }
-  
-  
-  .btn:hover {
-    transform: scale(1.3);
-  }
-  
-  
-  .movie-item {
-    flex: 0 0 auto;
-  }
-  
-  
-  #movie-lista-container, .movie-carousel-inner, #serie-trending-container {
-    height: 100%;
-  }
-  
-  
-  .movie-carousel-inner, .top10-carousel-inner {
-    display: flex;
-    gap: 15px;
-    transition: transform 0.5s ease-in-out;
-  }
-  
-  
-  .movie-item img {
-    margin-right: 60px;
-    height: 200px;
-  }
-  
-  
-  .button-container {
-    display: grid;
-    grid-template-rows: auto auto;
-    grid-template-columns: repeat(3, 1fr);
-    align-items: center;
-    justify-items: center;
-    gap: 10px;
-    margin-top: 10px;
-  }
-  
-  
-  .detalles-btn {
-    grid-column: 1/-1;
-    border-radius: 20px;
-    padding: 8px 15px;
-    width: 100%;
-    text-align: center;
-    font-weight: bold;
-  }
-  
-  
-  .fav-btn {
-    background: #ff4d4d;
-    border: none;
-  }
-  
-  
-  .add-btn {
-    background: #00fa94;
-    border: none;
-  }
-  
-  
-  .play-btn {
-    background: #ffcc00;
-    border: none;
-  }
-  
-  
-  .tituloPrincipal {
-    font-size: 50px;
-    margin-left: 20px;
-    background-color: var(--btn-negro);
-    text-align: center;
-  }
-  
-  
-  span {
-    display: none;
-  }
-  
-  
-  .aparecer {
-    display: none;
-  }
-  
-  
-  .titulos {
-    font-size: 40px;
-    margin-left: 20px;
-    background-color: var(--btn-negro);
-  }
-  
-  
-  .play-btn {
-    background-color: var(--primary-color-light);
-  }
-  
-  
-  .movie-item {
-    position: relative;
-    display: inline-block;
-    margin-right: 15px;
-  }
-  
-  
-  .movie-number {
-    position: absolute;
-    left: 0px;
-    top: 25%;
-    transform: translateY(-50%);
-    font-size: 110px;
-    font-weight: bold;
-    color: rgba(0, 0, 0, 0.7);
-    -webkit-text-stroke: 4px rgb(255, 255, 255);
-    z-index: 3;
-  }
-  
-  
-  .movie-poster {
-    position: relative;
-    width: 300px;
-    height: 250px;
-    border-radius: 10px;
-    overflow: hidden;
-  }
-  
-  
-  .movie-poster img {
+}
+
+.button-container {
+  display: flex;
+  gap: 15px;
+  margin-top: 10px;
+}
+
+.movie-overview {
+  font-size: 14px;
+  color: #bbb;
+  font-weight: 500;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: 4.5em;
+  padding: 35px 35px;
+}
+
+.btn:hover {
+  transform: scale(1.3);
+}
+
+.movie-item {
+  flex: 0 0 auto;
+}
+
+#movie-lista-container, .movie-carousel-inner, #serie-trending-container {
+  height: 100%;
+}
+
+.movie-carousel-inner, .top10-carousel-inner {
+  display: flex;
+  gap: 15px;
+  transition: transform 0.5s ease-in-out;
+}
+
+.movie-item img {
+  margin-right: 60px;
+  height: 200px;
+}
+
+.button-container {
+  display: grid;
+  grid-template-rows: auto auto;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  justify-items: center;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.detalles-btn {
+  grid-column: 1/-1;
+  border-radius: 20px;
+  padding: 8px 15px;
+  width: 100%;
+  text-align: center;
+  font-weight: bold;
+}
+
+.fav-btn {
+  background: #ff4d4d;
+  border: none;
+}
+
+.add-btn {
+  background: #00fa94;
+  border: none;
+}
+
+.play-btn {
+  background: #ffcc00;
+  border: none;
+}
+
+.tituloPrincipal {
+  font-size: 50px;
+  margin-left: 20px;
+  background-color: var(--btn-negro);
+  text-align: center;
+}
+
+span, .aparecer {
+  display: none;
+}
+
+.titulos {
+  font-size: 40px;
+  margin-left: 20px;
+  background-color: var(--btn-negro);
+}
+
+.play-btn {
+  background-color: var(--primary-color-light);
+}
+
+.movie-item {
+  position: relative;
+  display: inline-block;
+  margin-right: 15px;
+}
+
+.movie-number {
+  position: absolute;
+  left: 0px;
+  top: 25%;
+  transform: translateY(-50%);
+  font-size: 110px;
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0.7);
+  -webkit-text-stroke: 4px rgb(255, 255, 255);
+  z-index: 3;
+}
+
+.movie-poster {
+  position: relative;
+  width: 300px;
+  height: 250px;
+  border-radius: 10px;
+  overflow: hidden;
+
+  img {
     width: 100%;
     height: auto;
     display: block;
     position: relative;
     z-index: 2;
   }
-  
-  
-  .movie-container {
-    display: flex;
-    flex-wrap: nowrap;
-    overflow-x: auto;
-    gap: 15px;
-  }
-  
-  
-  #movie-top10-container {
-    display: flex;
-    flex-wrap: nowrap;
-    overflow: hidden;
-    gap: 10px;
-    scroll-behavior: smooth;
-  }
-  
-  
-  .movie-item {
-    flex: 0 0 auto;
-  }
-  
-  
-  .movie-item img {
+}
+
+.movie-container {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  gap: 15px;
+}
+
+#movie-top10-container {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow: hidden;
+  gap: 10px;
+  scroll-behavior: smooth;
+}
+
+.movie-item {
+  flex: 0 0 auto;
+
+  img {
     width: 100%;
     height: 100%;
     -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
   }
-  
-  
-  .movie-number {
-    position: absolute;
-    left: 5px;
-    top: 50%;
-    font-size: 140px;
-    font-weight: bold;
-    color: rgba(0, 0, 0, 0.384);
-    -webkit-text-stroke: 3px rgb(255, 255, 255);
-    z-index: 3;
-  }
-  
-  
-  .movie-item img {
+}
+
+.movie-number {
+  position: absolute;
+  left: 5px;
+  top: 50%;
+  font-size: 140px;
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0.384);
+  -webkit-text-stroke: 3px rgb(255, 255, 255);
+  z-index: 3;
+}
+
+.movie-item img {
+  width: 100%;
+}
+
+#serie-trending-container {
+  img {
     width: 100%;
   }
-  
-  
-  #serie-trending-container img {
-    width: 100%;
-  }
-  
-  
-  #serie-trending-container {
-    display: flex;
-    flex-wrap: nowrap;
-    overflow-x: auto;
-    gap: 15px;
-    scroll-behavior: smooth;
-  }
-  
-  
-  .serie-item {
-    flex: 0 0 auto;
-    position: relative;
-    margin-right: 15px;
-    height: 300px;
-    overflow: hidden;
-    border-radius: 5%;
-    transition: transform 0.3s ease-in-out;
-  }
-  
-  
-  .serie-item:hover {
+
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  gap: 15px;
+  scroll-behavior: smooth;
+}
+
+.serie-item {
+  flex: 0 0 auto;
+  position: relative;
+  margin-right: 15px;
+  height: 300px;
+  overflow: hidden;
+  border-radius: 5%;
+  transition: transform 0.3s ease-in-out;
+
+  &:hover {
     transform: scale(1.3);
   }
-  
-  
-  .serie-item img {
+
+  img {
     width: 100%;
     height: 100%;
     -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
   }
-  
-  
-  #serie-lista-container {
-    visibility: visible !important;
-    display: block !important;
-    font-size: 1.2em; 
+}
+
+#serie-lista-container {
+  visibility: visible !important;
+  display: block !important;
+  font-size: 1.2em;
+}
+
+@media (min-width: 768px) {
+  .tituloPrincipal {
+    text-align: left;
   }
-  
-  
-  @media (min-width: 768px) {
-    .tituloPrincipal {
-      text-align: left;
-    }
+}
+
+@media (min-width: 992px) {
+  span {
+    display: inline-block;
   }
-  @media (min-width: 992px) {
-    span {
-      display: inline-block;
-    }
-    .ocultar {
-      display: none;
-    }
-    .aparecer {
-      display: inline-block;
-    }
+
+  .ocultar {
+    display: none;
   }
-  
+
+  .aparecer {
+    display: inline-block;
+  }
+}
