final sin responsive

--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -4,4 +4,5 @@
 @use "./parciales/estilos_pelis";
 @use "./parciales/estilos_series";
 @use "./parciales/estilos_detallePeli";
+@use "./parciales/estilos_detalleSerie";
 @use "./parciales/estilos_visionado";
